--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -14,10 +14,16 @@
             android:id="@+id/textView20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="250dp"
-            android:textSize="50dp"
-            android:text="Favela venceu no Covid familia !"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@android:color/background_dark"
+            android:text="O que é o COVID-19 ? \n\n A doença provocada pelo novo Coronavírus é oficialmente conhecida como COVID-19, vírus que causa doença respiratória pelo agente Coronavírus, com casos inicialmente registrados na China e hoje espalhados por todo o mundo. Quadro pode variar de leve a moderado, semelhante a uma gripe. Alguns casos podem ser mais graves, por exemplo, em pessoas que já possuem outras doenças. Nessas situações, pode ocorrer síndrome respiratória aguda grave e complicações. Em casos extremos, pode levar a óbito.\n\nGrupos de risco: Idosos e pessoas com doenças crônicas como hipertensão, diabetes e asma. \n\nComo é sua transmissão ? \n\nSua transmissão está relacionada a disseminação de pessoa para pessoa, ou seja, a contaminação por secreções e gotículas respiratórias emitidas de espirros, tosses, catarros e salivas, através do contato com pessoas que já possuem o vírus ou por contato com superfícies e objetos que estejam contaminados. \n\nOs sintomas: A COVID-19 afeta diferentes pessoas de diferentes maneiras. A maioria das pessoas infectadas apresentam sintomas leves a moderados da doença e não precisam ser hospitalizadas. Em média, os sintomas aparecem após 5 ou 6 dias depois de ser infectado com o vírus. Porém, isso pode levar até 14 dias. \n\nOs sintomas mais comuns são: febre, tosse seca e cansaço. \n\nSintomas graves*: dificuldade de respirar ou falta de ar, dor ou pressão no peito, perda de fala ou movimento. \n\nSintomas menos comuns: dores e desconfortos, dor de garganta, diarreia, conjuntivite, dor de cabeça, perda de paladar ou olfato, erupção cutânea na pele ou descoloração dos dedos das mãos ou dos pés. \n\nComo se prevenir ?  \n\nLave suas mãos frequentemente com água e sabão e utilize alcool 70%;  Mantenha uma distância segura de pessoas que estiverem tossindo ou espirrando; Use máscara quando não for possível manter o distanciamento físico; Não toque nos olhos, no nariz ou na boca; Cubra seu nariz e boca com o braço dobrado ou um lenço ao tossir ou expirar; Fique em casa se você se sentir indisposto; Procurar atendimento médico se tiver febre, tosse e dificuldade para respirar. \n\nTratamento: Pouco se sabe sobre sua forma de cura, por ser um vírus novo não possui ainda um tratamento especifico."
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
